Prevent nav from wrapping

--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -168,6 +168,7 @@
     a {
       display: flex;
       font: 500 var(--font-variant-caption);
+      white-space: nowrap;
       padding: 10px 10px;
       //height: 40px;
 
@@ -249,6 +250,7 @@
     scrollbar-gutter: stable;
     border-left: 1px solid rgba(0, 0, 0, 0.1);
     border-right: 1px solid rgba(0, 0, 0, 0.1);
+    padding-inline: 10px;
     gap: 10px;
 
     @include breakpoint.mobile-only {
